--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a class="nav-link" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Product.html">Product</a>
+                <a class="nav-link" href="product.html">Product</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="about.html">About</a>
